# claude-ctx-plugin

./: .active-rules  .gitignore  CCUSAGE_INTEGRATION_FINDINGS.md  CONTRIBUTING.md  COPY_FEATURE_SUMMARY.md  CREATE_THESE_ISSUES.md  ERROR_HANDLING_IMPROVEMENTS.md  FLAGS.md  MANIFEST.in  Makefile  PRINCIPLES.md  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  RULES.md  TEST_COVERAGE_PLAN.md  TODO.md  justfile  mypy.ini  pyproject.toml  pytest.ini  reproduce_bug.py  settings.json  verify_import.py
.claude-plugin/: plugin.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: test_coverage.md
.github/workflows/: semantic-release.yml  type-check.yml
agents/: cloud-architect.md  code-reviewer.md  debugger.md  dependencies.map  deployment-engineer.md  kubernetes-architect.md  python-pro.md  security-auditor.md  terraform-specialist.md  triggers.yaml  typescript-pro.md
agents-disabled/: TRIGGERS.md  backend-architect.md  code-reviewer.md  dx-optimizer.md
claude_ctx_py/: ERROR_HANDLING_GUIDE.md  activator.py  analytics.py  cli.py  cmd_ai.py  community.py  completions.py  composer.py  core.py  error_utils.py  exceptions.py  init_cmds.py  intelligence.py  metrics.py  shell_integration.py  skill_rating.py  skill_recommender.py  suggester.py  tui.py  tui_command_palette.py  tui_commands.py  tui_dashboard.py  tui_dialogs.py  tui_extensions.py  tui_format.py  tui_graphs.py  tui_icons.py  tui_log_viewer.py  tui_mcp.py  tui_notifications.py  tui_overview_enhanced.py  tui_performance.py  tui_progress.py  tui_supersaiyan.py  tui_textual.py  tui_workflow_viz.py  tui_workflows_orchest.py  versioner.py  watch.py
claude_ctx_py/core/: __init__.py  agents.py  asset_discovery.py  asset_installer.py  backup.py  base.py  components.py  context_export.py  hooks.py  mcp.py  mcp_installer.py  mode_metadata.py  modes.py  profiles.py  rules.py  scenarios.py  skills.py  workflows.py
claude_ctx_py/intelligence/: __init__.py  base.py  config.py  semantic.py
claude_ctx_py/memory/: capture.py  config.py  notes.py  search.py  templates.py
claude_ctx_py/tui/: constants.py  main.py  styles.tcss  types.py  widgets.py
commands/: README.md  kamehameha.md  over9000.md  supersaiyan.md
commands/analyze/: README.md  code.md  doctor.md  estimate.md  explain.md  security-scan.md  troubleshoot.md
commands/cleanup/: archive-sprint.md  code-cleanup.md  deps-cleanup.md  docs-cleanup.md  test-cleanup.md
commands/collaboration/: brainstorm.md  execute-plan.md  plan.md
commands/deploy/: prepare-release.md
commands/design/: README.md  system.md  workflow.md
commands/dev/: README.md  build.md  code-review.md  git.md  implement.md  test.md
commands/docs/: README.md  generate.md  index.md
commands/orchestrate/: README.md  brainstorm.md  spawn.md  task.md
commands/quality/: README.md  cleanup.md  improve.md
commands/reasoning/: adjust.md  budget.md  metrics.md
commands/session/: README.md  load.md  reflect.md  save.md
commands/test/: generate-tests.md
commands/tools/: README.md  select.md
data/: skill-ratings.db
docs/: .jekyllignore  AI_IMPLEMENTATION_SUMMARY.md  AI_INTELLIGENCE.md  CHANGELOG-terminology-update.md  DAY1_COMPLETE.md  Gemfile  MCP_IMPLEMENTATION_SUMMARY.md  MCP_MANAGEMENT.md  MCP_MODULE_README.md  MODEL_OPTIMIZATION.md  NEXT_ACTIONS.md  README.md  SEQUENTIAL_EXECUTION_PLAN.md  WARP_AI_INTEGRATION.md  WEEK0_SUMMARY.md  WHATS_NEW.md  _config.yml  architecture.md  claude-ctx.1  commands.md  index.md  manpage-automation.md  model-optimization.md  phase4-summary.md  phase5-feature2-rating-system-summary.md  quality-improvements.md  skill-analytics-examples.md  skill-versioning-README.md  skills.md  tui-keyboard-reference.md  tui-mcp-view.md  tui-navigation-summary.md
docs/_includes/: head-custom.html
docs/_site/: INSTALL.html  PARALLEL_ORCHESTRATION_GUIDE.html  README.md  REASONING_IMPROVEMENTS.html  SUPER_SAIYAN_INTEGRATION.html  agents.html  architecture.html  commands.html  commands.md.bak  (+12 more)
examples/: supersaiyan_demo.py
hooks/: README.md
modes/: Parallel_Orchestration.md  SUPER_SAIYAN_UNIVERSAL.md  Super_Saiyan.md  Task_Management.md
presentations/: claude-ctx-overview.html
rules/: efficiency-rules.md  git-rules.md  parallel-execution-rules.md  quality-gate-rules.md  quality-rules.md  workflow-rules.md
schema/: agent-schema-v2.yaml
scripts/: claude-ctx  create-statusline.sh  generate-manpages.py  install-claude-ctx.sh  install-manpage.sh  install.sh
skills/: LICENSE.superpowers  README.md  activation.yaml  composition.yaml  skill-rules.json  versions.yaml
tests/: README.md  conftest.py
workflows/: README.md
(+207 files in other folders)
