[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ctx-py"
version = "0.1.0"
description = "Python rewrite of claude-ctx list and status commands"
authors = [{name = "Code", email = "code@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://example.com"

[project.scripts]
claude-ctx = "claude_ctx_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_ctx_py*"]

[tool.uv.workspace]
members = [
    "shareable/claude-ctx-installer/claude_ctx_py",
]
