[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ctx-py"
version = "0.1.0"
description = "Python rewrite of claude-ctx list and status commands"
authors = [{name = "Nicholas Ferguson", email = "ncf423@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argcomplete>=3.2",
]

[project.urls]
Homepage = "https://github.com/NickCrew/claude-ctx-plugin"

[project.scripts]
claude-ctx = "claude_ctx_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_ctx_py*"]

[tool.uv.workspace]
members = [
    "claude_ctx_py",
]
