[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ctx-py"
version = "0.1.0"
description = "Python rewrite of claude-ctx list and status commands"
authors = [{name = "Nicholas Ferguson", email = "ncf423@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argcomplete>=3.2",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "black>=23.0.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/NickCrew/claude-ctx-plugin"

[project.scripts]
claude-ctx = "claude_ctx_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_ctx_py*"]

[tool.setuptools.package-data]
"*" = ["docs/reference/architecture/*"]

[tool.setuptools.data-files]
"share/man/man1" = [
    "docs/reference/claude-ctx.1",
    "docs/reference/claude-ctx-tui.1",
    "docs/reference/claude-ctx-workflow.1",
]
"share/claude-ctx/docs" = [
    "docs/reference/architecture/architecture-diagrams.md",
    "docs/reference/architecture/quick-reference.md",
    "docs/reference/architecture/DIAGRAMS_README.md",
    "docs/reference/architecture/VISUAL_SUMMARY.txt",
    "docs/reference/architecture/README.md",
]


[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_ctx_py.activator"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "claude_ctx_py.composer"
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=claude_ctx_py",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for CLI and workflows",
    "slow: Tests that take longer to run",
    "requires_yaml: Tests that require PyYAML to be installed",
]

[tool.coverage.run]
source = ["claude_ctx_py"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | htmlcov
)/
'''
